--- a/client/src/components/complex/Header/Header.module.scss
+++ b/client/src/components/complex/Header/Header.module.scss
@@ -1,11 +1,13 @@
 @use "../../../styles/variables.scss" as vars;
 
 .wrapper {
-    padding: 30px vars.$padding_x;
+    padding: 0 vars.$padding_x;
+    height: 100px;
     background-color: #bad6eb;
 }
 
 .container {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
