--- a/client/src/components/simple/PostCard/PostCard.module.scss
+++ b/client/src/components/simple/PostCard/PostCard.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/variables.scss" as vars;
 
 .card {
-    width: 400px;
+    // width: 400px;
     padding: 15px;
     display: flex;
     flex-direction: column;
