--- a/client/src/pages/Home/sections/Welcome/Welcome.module.scss
+++ b/client/src/pages/Home/sections/Welcome/Welcome.module.scss
@@ -45,3 +45,41 @@
     display: flex;
     gap: 10px;
 }
+
+
+@media (min-width:768px) and (max-width: 992px) {
+    .title {
+        font-size: 3.5rem;
+    
+        &>span {
+            font-size: 2.5rem;
+        }
+    }
+    .subtitle {
+        font-size: 0.9rem;
+    }
+    .action {
+        width: 100px;
+
+        & > button {
+            font-size: 10px;
+        }
+    }
+}
+
+@media (min-width:576px) and (max-width:767px){
+    .title {
+        font-size: 3.5rem;
+    
+        &>span {
+            font-size: 2.5rem;
+        }
+    }
+    .subtitle {
+        font-size: 0.9rem;
+    }
+}
+
+@media(max-width:575px){
+  
+}
