--- a/client/src/components/complex/Header/Header.module.scss
+++ b/client/src/components/complex/Header/Header.module.scss
@@ -41,6 +41,9 @@
     align-items: center;
     gap: 10px;
 }
+.userLogo{
+    font-size: 1.5rem;
+}
 
 .sign_up {
     background-color: #ffdc5f;
@@ -51,4 +54,21 @@
     &:hover {
         background-color: #f5c400;
     }
+}
+
+@media (max-width: 992px) {
+    .logo {
+        font-size: 0.9rem;
+    }
+    .list_item {
+        font-size: 0.9rem;
+    }
+    .userLogo{
+        font-size: 1.4rem;
+    }
+}
+
+
+@media(max-width:575px) {
+
 }
