--- a/client/src/pages/Home/sections/PostsFeed/PostsFeed.module.scss
+++ b/client/src/pages/Home/sections/PostsFeed/PostsFeed.module.scss
@@ -4,17 +4,34 @@
     padding: 100px vars.$padding_x;
     display: flex;
 }
-.container{
+
+.container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 80px;
 }
+
 .title {
     font-size: 2rem;
-    margin-bottom: 40px;
 }
+
 .posts {
     display: grid;
     width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+    grid-template-columns: repeat(auto-fit, minmax(auto, 300px));
     gap: 30px;
-    justify-content: space-between;
+    justify-content: space-around;
 }
+
+
+
+@media (max-width: 768px) {
+    .posts {
+        grid-template-columns: repeat(auto-fit, minmax(auto, 100%));
+    }
+}
+
+
+@media(max-width:575px) {}
