--- a/client/src/pages/Home/sections/Welcome/Welcome.module.scss
+++ b/client/src/pages/Home/sections/Welcome/Welcome.module.scss
@@ -47,39 +47,52 @@
 }
 
 
-@media (min-width:768px) and (max-width: 992px) {
+@media (max-width: 992px) {
     .title {
         font-size: 3.5rem;
-    
+
         &>span {
             font-size: 2.5rem;
         }
     }
+
     .subtitle {
         font-size: 0.9rem;
     }
+
     .action {
-        width: 100px;
-
-        & > button {
-            font-size: 10px;
+        & > span {
+            font-size: 0.7rem;       
+        }
+        & > .actionIcon {
+            font-size: 0.7rem;       
         }
     }
 }
 
-@media (min-width:576px) and (max-width:767px){
+
+@media(max-width:575px) {
+    .welcome {
+        // padding: 0 10px;
+    }
     .title {
-        font-size: 3.5rem;
-    
+        font-size: 3rem;
+
         &>span {
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
     }
-    .subtitle {
-        font-size: 0.9rem;
-    }
-}
 
-@media(max-width:575px){
-  
+    .subtitle {
+        font-size: 0.8rem;
+    }
+
+    .action {
+        & > span {
+            font-size: 0.6rem;       
+        }
+        & > .actionIcon {
+            font-size: 0.7rem;       
+        }
+    }
 }
